@@ -5,7 +5,8 @@ version 0.4.3 (cvs)
 	- Automatically breaks up large messages for transport (using
 	NotesBuddy multi-segment messages)
 	- Support for DH RC2/128 channel encryption
-
+	- Support for DH RC2/128 login encryption
+	
 	Bug Fixes
 	- Bug #1239210 Unspecified fatal error when VPN disconnects
 	
